# chess

./: CMakeLists.txt  LICENSE  README.md
include/: constants.hpp  json.hpp  types.hpp
include/imgui/: imconfig.h  imgui-SFML.h  imgui-SFML_export.h
src/: constants.cpp  main.cpp  types.cpp
src/imgui/: imgui-SFML.cpp
